<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/md_white_1000"
    tools:context=".view.ValuePopupActivity">





    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/picContact"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="20sp"
        android:id="@+id/name"
        android:textColor="@color/BLACK"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/picContact"
        android:layout_marginTop="15dp"
         />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defMobile"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:id="@+id/mobile"
        android:textColor="@color/BLACK"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btnSendMoney"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:elevation="30dp"
        android:layout_below="@+id/valToSend"

        android:width="200dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/defMoney"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:id="@+id/valToSend"
        android:layout_below="@+id/mobile"
        android:layout_centerHorizontal="true"
        android:width="200dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/valToSend"
        android:id="@+id/textView"

        android:layout_below="@+id/mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>


</RelativeLayout>
