<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/rounded_corners"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/userName"
    android:textSize="30sp"
    android:layout_below="@+id/imageView"
    android:layout_centerHorizontal="true"
    android:id="@+id/userName"
    android:textColor="@color/WHITE"></TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:id="@+id/email"
        android:textColor="@color/WHITE"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendMoney"
        android:id="@+id/sendMoney"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:elevation="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showHistory"
        android:id="@+id/showHistory"
        android:layout_below="@+id/sendMoney"
        android:layout_alignStart="@+id/sendMoney" />






    <!--
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/circularimage"
        android:id="@+id/circleView"
        android:elevation="2dp">
    </de.hdodenhof.circleimageview.CircleImageView>
     !-->


</RelativeLayout>
